welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
blueTicket:2: error: not found: value ab
  ab=a+b;bc=b+c;ac=a+c
  ^blueTicket:2: error: not found: value bc
  ab=a+b;bc=b+c;ac=a+c
         ^blueTicket:2: error: not found: value ac
  ab=a+b;bc=b+c;ac=a+c
                ^blueTicket:3: error: not found: value ab
  if (ab==10||ac==10|bc==10){return 10}
      ^blueTicket:3: error: not found: value ac
  if (ab==10||ac==10|bc==10){return 10}
              ^blueTicket:3: error: not found: value bc
  if (ab==10||ac==10|bc==10){return 10}
                     ^blueTicket:4: error: not found: value ab
  else if (ab==ac+10||ab==bc+10){return 5}
           ^blueTicket:4: error: not found: value ac
  else if (ab==ac+10||ab==bc+10){return 5}
               ^blueTicket:4: error: not found: value ab
  else if (ab==ac+10||ab==bc+10){return 5}
                      ^blueTicket:4: error: not found: value bc
  else if (ab==ac+10||ab==bc+10){return 5}
                          ^